syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Valmar";
package events;

// Service definition for events and their drops
service Events {
  
  // Gets all events
  rpc GetAllEvents (google.protobuf.Empty) returns (stream EventReply);
  
  // Gets the currently active event
  rpc GetCurrentEvent (google.protobuf.Empty) returns (EventReply);
  
  // Gets an event by its id
  rpc GetEventById (GetEventRequest) returns (EventReply);
  
  // Gets all eventdrops
  rpc GetAllEventDrops (google.protobuf.Empty) returns (stream EventDropReply);

  // Gets an event drop by id
  rpc GetEventDropById (GetEventDropRequest) returns (EventDropReply);
  
  // Gets all eventdrops of an event
  rpc GetEventDropsOfEvent (GetEventRequest) returns (stream EventDropReply);
  
  // gets the release slots of an progressive event
  rpc GetEventReleaseSlots (GetEventRequest) returns (stream google.protobuf.Timestamp);
  
}

// A palantir event
message EventReply {
  string name = 1;
  int32 id = 2;
  string description = 4;
  int32 length = 5;  
  bool progressive = 6;
  google.protobuf.Timestamp startDate = 7;
  google.protobuf.Timestamp endDate = 8;
}

// A palantir event drop
message EventDropReply {
  string name = 1;
  int32 id = 2;
  string url = 3;
  int32 eventId = 4;
  google.protobuf.Timestamp releaseStart = 7;
  google.protobuf.Timestamp releaseEnd = 8;
}

// Request containing an event id
message GetEventRequest {
  int32 id = 1;
}

// Request containing eventdrop id
message GetEventDropRequest {
  int32 id = 1;
}
