syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "tobeh.Valmar";
package awards;

enum AwardRarityMessage {
  Common = 0;
  Special = 1;
  Epic = 2;
  Legendary = 3;
}

// Service definition for award resource access
service Awards {
  
  // Gets all awards
  rpc GetAllAwards (google.protobuf.Empty) returns (stream AwardReply);

  // Gets an award by its id
  rpc GetAwardById (GetAwardRequest) returns (AwardReply);
}

// Response containing a award's properties.
message AwardReply {
  string name = 1;
  string url = 2;
  int32 id = 3;
  string description = 4;
  int32 rarityNum = 5  [deprecated = true];
  AwardRarityMessage rarity = 6;
}

// Request containing a award id
message GetAwardRequest {
  int32 id = 1;
}
